# zkt_attendance

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
zkt_attendance/: hooks.py  modules.txt
zkt_attendance/api/: __init__.py
zkt_attendance/public/css/: zkt_attendance.css
zkt_attendance/public/js/: zkt_attendance.js
zkt_attendance/utils/: scheduler.py  zk_connector.py
zkt_attendance/workspace/zkt_attendance/: zkt_attendance.json
zkt_attendance/zkt_attendance/doctype/zkt_attendance_log/: zkt_attendance_log.js  zkt_attendance_log.json  zkt_attendance_log.py
zkt_attendance/zkt_attendance/doctype/zkt_machine/: zkt_machine.js  zkt_machine.json  zkt_machine.py
